# codex_continual_research_bot

./: .gitignore  AGENTS.md  ARCH.md  AUTH_AND_EXECUTION.md  README.md  RUNTIME.md  SPEC.md  TASK.md  TASKS.md  pyproject.toml
.github/: pull_request_template.md
artifacts/playwright/: manifest.json
docs/: cli-ux-contract.md  graph-canonicalization.md  graph-explorer-sample.html  orchestrator-state-machine.md  persistence-ledger.md  phase-19-first-research-walkthrough.md  phase-19-web-ux-audit.md  test-matrix.md  web-ui-ux-contract.md
fixtures/: cli_command_spec.json  failure_taxonomy.json  graph_export.json  human_summary_topic_show.txt  iso26262_sample_research_demo.json  iso26262_web_dashboard_artifact.json  proposal_bundle.json  queue_job.json  run_execution_request.json  runtime_event.json  sample_topic_run.json  session_inspect.json  tutorial_transcript.txt  ux_read_models.json  web_dashboard_view_models.json
src/codex_continual_research_bot/: __init__.py  cli.py  cli_backend.py  cli_contracts.py  codex_app_server_inspector.py  contracts.py  credential_locator.py  failure_analysis.py  graph_canonicalization.py  (+17 more)
tests/: test_cli.py  test_contract_fixtures.py  test_first_user_experience.py  test_graph_canonicalization.py  test_graph_visualization.py  test_interactive.py  test_operational.py  test_orchestrator.py  test_persistence.py  test_queue_worker.py  test_runtime.py  test_scheduled.py  test_scheduler.py  test_session_manager.py  test_tool_registry.py  test_ux_contracts.py  test_web.py  test_web_graph_explorer.py  test_web_playwright.py  test_worker_loop.py
(+19 files in other folders)
