[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-continual-research-bot"
version = "0.1.0"
description = "Canonical contracts and validation fixtures for Continual Research Bot."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.scripts]
crb = "codex_continual_research_bot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_continual_research_bot = ["persistence/migrations/*.sql"]
"codex_continual_research_bot.web_static" = ["*.html", "*.css", "*.js"]
